# grafana-openai-monitoring

./: README.md  grafana_openai_monitoring.py  main.py  pyproject.toml
.github/workflows/: release.yml
examples/: main.py
src/grafana_openai_monitoring/: monitor.py
